# AutoBernese

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  environment-dev.yml  environment.yml  index.html  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: docs.yaml  test.yml
bernese-setup/: index.html
concepts/: index.html
data-sources/: index.html
dev/contribute/: index.html
dev/system-overview/: index.html
developer/: index.html
docs/: bernese-setup.md  concepts.md  data-sources.md  developer.md  index.md  prerequisites.md  references.md  system-overview.md
docs/assets/: workflows.bpmn
docs/dev/: contribute.md  system-overview.md
docs/manual/: command-reference.md  commands.md  configuration-files.md  download-sources.md  install-autobernese.md  quick-start.md
docs/manual/assets/: autobernese.yaml  campaign.yaml  quick-start_run.cast
manual/assets/: autobernese.yaml  campaign.yaml
manual/command-reference/: index.html
manual/configuration-files/: index.html
manual/download-sources/: index.html
manual/install-autobernese/: index.html
manual/quick-start/: index.html
prerequisites/: index.html
references/: index.html
search/: search_index.json
src/ab/: __init__.py  autobernese.yaml  bpe.pl  bsw.py  cache.py  calculate.py  cli.py  configuration.py  configuration.yaml  data.py  dates.py  files.py  gps.py  imports.py  organiser.py  parameters.py  paths.py  pkg.py  qaqc.py  ressources.py  sitelog.py  sta.py  strings.py  tasks.py  typing.py  vmf.py  yaml_constructors.py
src/ab/bsw/: MENU_CMP.INP  __init__.py  bpe.pl  bpe.py  bpe_terminal_output.py  bsw.py  campaign.py  campaign_header.yaml  default.yaml  task.py
src/ab/bsw/templates/: default.yaml  example.yaml
src/ab/cli/: __init__.py  _actions.py  _arguments.py  _filter.py  _input.py  _options.py  _output.py  about.py  campaign.py  config.py  dateinfo.py  download.py  logs.py  qc.py  station.py  troposphere.py
src/ab/configuration/: __init__.py  autobernese.yaml  bsw_env_vars  core.yaml  dispatchers.py  env.yaml  loadgps_setvar.py  sources.py  tasks.py  yaml_constructors.py
src/ab/configuration/constructors/: __init__.py  dates.py  paths.py  sources.py  strings.py  tasks.py
src/ab/country_code/: ISO-3166-1-alpha-3.yaml  __init__.py
src/ab/data/: __init__.py  compress.py  file.py  ftp.py  http.py  sftp.py  source.py  stats.py
src/ab/preprocessing/: sitelog.py  sta.py
src/ab/qaqc/: __init__.py  check_example.py
src/ab/station/: 1.03.STA  __init__.py  sitelog.py  sta.py
src/ab/station/sitelog/: __init__.py  models.py  parse.py
src/ab/templates/: autobernese.yaml
stylesheets/: extra.css
system-overview/: index.html
tests/ab/: conftest.py  test_calculate.py  test_country_code.py  test_data.py  test_dates.py  test_dummy.py  test_env.yaml  test_gps.py  test_package.py  test_parameters.py  test_paths.py  test_sta.py  test_strings.py  test_vmf.py
tests/ab/bsw/: test_bpe.py  test_campaign.py
tests/ab/configuration/: test_configuration.py  test_constructors.py  test_yaml_constructors.py
tests/ab/data/: test_init.py  test_source.py
tests/ab/preprocessing/: test_sta.py
tests/ab/qaqc/: test_check_example.py
tests/ab/station/: test_sitelog.py  test_sta.py
workspace/structurizr/: workspace.dsl
(+7 files in other folders)
