[build-system]
requires = [
    'wheel',
    'setuptools>=43.0.0',
]
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
addopts = '--strict-markers -r A -q'
testpaths = ['tests']

[tool.coverage.paths]
source = ['src']

[tool.coverage.run]
branch = true
source = ['ab']

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
mypy_path = "src"
