[metadata]
name = ab
version = 0.1.0
description = AutoBernese
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/SDFIDK/AutoBernese
author = Joachim Mortensen
author_email = joamo@sdfi.dk
license = MIT
license_file = LICENSE
project_urls =
    Documentation = https://SDFIDK.github.io/AutoBernese
    Source = https://github.com/SDFIDK/AutoBernese
    Tracker = https://github.com/SDFIDK/AutoBernese/issues

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
platforms = any
python_requires = >=3.11
install_requires =
    coverage

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ab = ab.cli:main
