[metadata]
name = ab
version = 0.4.1
description = AutoBernese
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/SDFIDK/AutoBernese
author = Joachim Mortensen
author_email = joamo@kds.dk
license = MIT
license_file = LICENSE
project_urls =
    Documentation = https://SDFIDK.github.io/AutoBernese
    Source = https://github.com/SDFIDK/AutoBernese
    Tracker = https://github.com/SDFIDK/AutoBernese/issues

[options]
zip_safe = False
# include_package_data = True
packages = find:
package_dir =
    = src
platforms = any
python_requires = >=3.12
install_requires =
    coverage

[options.packages.find]
where = src

[options.package_data]
ab =
   bsw/bpe.pl
   bsw/campaign_header.yaml
   bsw/MENU_CMP.INP
   bsw/templates/default.yaml
   configuration/env.yaml
   country_code/ISO-3166-1-alpha-3.yaml
   station/1.03.STA

[options.entry_points]
console_scripts =
    ab = ab.cli:main
